--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^24.3.0",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.8.2"
   },
